--- a/theia-tpm/package.json
+++ b/theia-tpm/package.json
@@ -7,9 +7,11 @@
   "scripts": {
     "build:browser": "yarn --cwd browser-app bundle",
     "build:electron": "yarn --cwd electron-app bundle",
+    "build:browser-only": "yarn --cwd browser-only bundle",
     "prepare": "lerna run prepare",
     "postinstall": "theia check:theia-version",
     "start:browser": "yarn --cwd browser-app start",
+    "start:browser-only": "yarn --cwd browser-only start",
     "start:electron": "yarn --cwd electron-app start",
     "watch:browser": "lerna run --parallel watch --ignore electron-app",
     "watch:electron": "lerna run --parallel watch --ignore browser-app"
@@ -18,6 +20,6 @@
     "lerna": "2.4.0"
   },
   "workspaces": [
-     "browser-app", "electron-app"
+     "browser-app", "browser-only", "electron-app", "translation-project-manager"
   ]
 }
