Refactor project manager to use Theia-based translation project manager module
- Migrated project manager context and components to use new Theia TPM module
- Updated import paths to reference new module location
- Added container, index, models, and storage service implementations
- Configured TypeScript to include new project manager source directory
- Prepared modular, extensible framework for translation project management

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["src"],
+  "include": ["src", "theia-tpm/translation-project-manager/src/browser/project-manager"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
