Refactor project manager storage and module configuration
- Commented out RxDB and IndexedDB storage services
- Updated project manager frontend module to use service symbol
- Removed project manager widget and updated import paths
- Adjusted TypeScript configuration for better compatibility
- Prepared for future storage service implementation

--- a/theia-tpm/translation-project-manager/tsconfig.json
+++ b/theia-tpm/translation-project-manager/tsconfig.json
@@ -9,6 +9,7 @@
         "noUnusedLocals": true,
         "strictNullChecks": true,
         "strictPropertyInitialization": false,
+        "useDefineForClassFields": false,
         "sourceMap": true,
         "declaration": true,
         "skipLibCheck": true,
@@ -21,7 +22,9 @@
             "DOM"
         ],
         "rootDir": "src",
-        "outDir": "lib"
+        "outDir": "lib",
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true
     },
     "include": [
         "src"
