--- a/theia-tpm/package.json
+++ b/theia-tpm/package.json
@@ -14,7 +14,8 @@
     "start:browser-only": "yarn --cwd browser-only start",
     "start:electron": "yarn --cwd electron-app start",
     "watch:browser": "lerna run --parallel watch --ignore electron-app",
-    "watch:electron": "lerna run --parallel watch --ignore browser-app"
+    "watch:electron": "lerna run --parallel watch --ignore browser-app",
+    "watch:browser-only": "lerna run --parallel watch --scope browser-only"
   },
   "devDependencies": {
     "lerna": "2.4.0"
